# GR00T-WholeBodyControl

./: .gitattributes  .gitignore  DEV_NOTES.md  README.md  deploy_sonic.sh  deploy_sonic_with_zmq.sh  run_quest3_server.sh  run_sim.sh  run_sim_isaaclab.sh
decoupled_wbc/sim2mujoco/resources/robots/g1/: g1_gear_wbc.yaml
docs/: quest3_setup_guide.md  quest3_vs_pico_comparison.md
docs/source/: index.rst
docs/source/references/: x2_deployment_code.md
docs/source/user_guide/: compute_scaling_sonic_vs_ours.md  gpu_cost_comparison.md  ppo_batch_size_explainer.md  sim2sim_ablation_study.md  sim2sim_mujoco.md  train-on-cloud.md  training_data.md  training_runs.md  x2_first_real_robot.md  x2_sim_to_real_wip.md  x2_sonic_deploy_real.md  x2_sonic_diagnostic.md
docs/source/user_guide/milestones/: 2026-05-02_first_iter4000_powered_run.md  2026-05-02_post_deploy_tuning.md  2026-05-03_first_iter22000_powered_walk.md
gear_sonic/: eval_agent_trl.py
gear_sonic/config/actor_critic/universal_token/: x2_teleop_mlp_v1.yaml
gear_sonic/config/aux_losses/universal_token/: x2_recon_and_teleop_latent.yaml
gear_sonic/config/exp/manager/universal_token/all_modes/: sonic_x2_ultra.yaml  sonic_x2_ultra_bones_seed.yaml  sonic_x2_ultra_bones_seed_sphere_feet.yaml  sonic_x2_ultra_smoke.yaml
gear_sonic/config/manager_env/observations/tokenizer/: unitoken_x2_teleop_noz.yaml
gear_sonic/data/assets/robot_description/mjcf/: x2_ultra.xml
gear_sonic/data/assets/robot_description/urdf/x2_ultra/: x2_ultra.urdf
gear_sonic/data/robot_model/model_data/g1/g1_29dof_usd/: config.yaml  g1_29dof.usd
gear_sonic/data/robot_model/model_data/g1/g1_29dof_usd/configuration/: g1_29dof_base.usd  g1_29dof_physics.usd  g1_29dof_robot.usd  g1_29dof_sensor.usd
gear_sonic/data_process/: build_x2_bones_seed_motion_lib.py  convert_soma_csv_to_motion_lib.py
gear_sonic/envs/manager_env/: modular_tracking_env_cfg.py
gear_sonic/envs/manager_env/mdp/: commands.py
gear_sonic/envs/manager_env/robots/: __init__.py  x2_ultra.py
gear_sonic/scripts/: _warehouse_playlist.py  benchmark_motions_mujoco.py  dump_isaaclab_icecream.py  dump_isaaclab_step0.py  dump_isaaclab_trajectory.py  eval_x2_isaacsim_onnx.py  eval_x2_mujoco.py  eval_x2_mujoco_onnx.py  make_rest_loop.py  make_stitched_motion.py  make_warehouse_motion.py  onnx_policy_shim.py  phase5_mjcf_audit.py  pico_manager_thread_server.py  play_motion_mujoco.py  play_x2_motion_mujoco.py  quest3_manager_thread_server.py  record_x2_eval_mujoco.py  reexport_x2_g1_onnx.py  run_sim_isaaclab.py  sweep_isaac_mujoco_mirror.py
gear_sonic/scripts/cloud/: bootstrap_fresh_node.sh  build_stand_idle_smoke.py  nebius_gpu_scan.py  nebius_parallel_provision.py  run_smoke_8gpu.sh
gear_sonic/trl/callbacks/: im_eval_callback.py
gear_sonic/trl/losses/: token_losses.py
gear_sonic/trl/utils/: order_converter.py
gear_sonic/utils/isaaclab_sim/: __init__.py  g1_cfg.py
gear_sonic/utils/motion_lib/: motion_lib_base.py
gear_sonic/utils/mujoco_sim/: simulator_factory.py
gear_sonic/utils/teleop/: common.py
gear_sonic/utils/teleop/vr/: quest3_reader.py
gear_sonic/utils/teleop/vr/quest3_webxr_app/: index.html
gear_sonic_deploy/: .gitignore  deploy_x2.sh
gear_sonic_deploy/config/: sim_init_poses.yaml
gear_sonic_deploy/configs/: x2_stand_default_pose.yaml
gear_sonic_deploy/configs/real_deploy_tuning/: README.md  _schema.yaml  conservative.yaml  expressive.yaml
gear_sonic_deploy/docker_x2/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.real.yml  docker-compose.yml  enter_sim.sh  get_x2_sonic_ready.sh
gear_sonic_deploy/docs/: SMOOTH_HANDOFF.md
gear_sonic_deploy/scripts/: _capture_A_standing.json  _capture_B_gantry_loosened.json  _capture_C_zero_torque.json  _last_pose_capture.json  codegen_x2_policy_parameters.py  compare_deploy_vs_isaaclab_obs.py  compare_deploy_vs_python_obs.py  compare_isaaclab_vs_mujoco_obs.py  export_motion_for_deploy.py  parity_check_onnx_standstill.py  reexport_x2_onnx.sh  tuning_config_to_args.py  x2_action_monitor.py  x2_capture_pose.py  x2_mc_escalator.py  x2_mc_input_source_probe.sh  x2_mc_introspect.sh  x2_mc_mode_probe.sh  x2_mujoco_ros_bridge.py  x2_pelvis_z_from_capture.py  x2_pnc_heartbeat_probe.py  x2_pnc_heartbeat_probe.sh  x2_preflight.py  x2_record.sh  x2_record_real_run.py
gear_sonic_deploy/src/common/: CMakeLists.txt  README.md
gear_sonic_deploy/src/x2/agi_x2_deploy_onnx_ref/: CMakeLists.txt  README.md  package.xml
gear_sonic_deploy/src/x2/agi_x2_deploy_onnx_ref/config/: obs_config_x2_ultra.yaml
gear_sonic_deploy/src/x2/agi_x2_deploy_onnx_ref/include/: aimdk_io.hpp  deploy_logger.hpp  math_utils.hpp  onnx_actor.hpp  policy_parameters.hpp  proprioception_buffer.hpp  reference_motion.hpp  safety.hpp  stand_pose_loader.hpp  tokenizer_obs.hpp
gear_sonic_deploy/src/x2/agi_x2_deploy_onnx_ref/src/: aimdk_io.cpp  deploy_logger.cpp  onnx_actor.cpp  proprioception_buffer.cpp  reference_motion.cpp  safety.cpp  tokenizer_obs.cpp  x2_deploy_onnx_ref.cpp
gear_sonic_deploy/src/x2/agi_x2_deploy_onnx_ref/test/: test_obs_builder.cpp
install_scripts/: install_quest3.sh
